--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,3 +23,27 @@ jobs:
         run: yarn install && yarn run make
         env:
           GH_TOKEN: ${{ secrets.TOKEN }}
+
+      - name: Cleanup Artifacts for Windows
+          if: matrix.os == 'windows-latest'
+          run: |
+            npx rimraf "dist/!(*.exe)"
+        
+      - name: Cleanup Artifacts for MacOS
+        if: matrix.os == 'macos-latest'
+        run: |
+          npx rimraf "dist/!(*.dmg)"
+          
+      - name: upload artifacts
+        uses: actions/upload-artifact@v3.0.0
+        with:
+          name: ${{ matrix.os }}
+          path: dist
+          
+      - name: release
+        uses: softprops/action-gh-release@v0.1.14
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: "dist/**"
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
