--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,23 +27,23 @@ jobs:
       - name: Cleanup Artifacts for Windows
         if: matrix.os == 'windows-latest'
         run: |
-          npx rimraf "dist/!(*.exe)"
+          npx rimraf "out/!(*.exe)"
         
       - name: Cleanup Artifacts for MacOS
         if: matrix.os == 'macos-latest'
         run: |
-          npx rimraf "dist/!(*.dmg)"
+          npx rimraf "out/!(*.dmg)"
           
       - name: upload artifacts
         uses: actions/upload-artifact@v3.0.0
         with:
           name: ${{ matrix.os }}
-          path: dist
+          path: out
           
       - name: release
         uses: softprops/action-gh-release@v0.1.14
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: "dist/**"
+          files: "out/**"
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
